more commenting in headers

--- a/fnc_eval_model.ipynb
+++ b/fnc_eval_model.ipynb
@@ -5,13 +5,14 @@
    "id": "2998ab02-84fa-42a7-bf51-ba57306569e8",
    "metadata": {},
    "source": [
-    "% Name: Robert Kim\n",
-    "% Date: 03-29-2023\n",
-    "% Email: robert.f.kim@gmail.com\n",
-    "% fnc_generate_trials.m\n",
-    "% Description: Function to generate trials for a task\n",
+    " Name: Robert Kim\\\n",
+    " Date: 03-29-2023\\\n",
+    " Email: robert.f.kim@gmail.com\\\n",
+    " fnc_eval_model.m\\\n",
+    " Description: Implementation of rate model\n",
     "\n",
-    "Adapted from .m to .ipynb by Holly Kular 02-15-2024"
+    "Adapted from .m to .ipynb by Holly Kular\\\n",
+    "date: 02-15-2024"
    ]
   },
   {
@@ -19,10 +20,10 @@
    "id": "3930f620-8a85-4c1c-a0e4-6c92fad74476",
    "metadata": {},
    "source": [
-    "% INPUT\n",
-    "%   model_dir: full path to the trained model\n",
-    "%   uu: input signal\n",
-    "%   feedback: false or true (interlayer feedback)"
+    "INPUT\n",
+    "   - model_dir: full path to the trained model\n",
+    "   - uu: input signal\n",
+    "   - feedback: false or true (interlayer feedback)"
    ]
   },
   {
