--- a/fnc_generate_trials.ipynb
+++ b/fnc_generate_trials.ipynb
@@ -5,13 +5,14 @@
    "id": "dd27907a-401c-4daa-b4cf-ef9471ff0351",
    "metadata": {},
    "source": [
-    "% Name: Robert Kim\n",
-    "% Date: 03-29-2023\n",
-    "% Email: robert.f.kim@gmail.com\n",
-    "% fnc_generate_trials.m\n",
-    "% Description: Function to generate trials for a task\n",
+    "Name: Robert Kim\\\n",
+    "Date: 03-29-2023\\\n",
+    "Email: robert.f.kim@gmail.com\\\n",
+    "fnc_generate_trials.m\\\n",
+    "Description: Function to generate trials for a task\n",
     "\n",
-    "Adapted from .m to .ipynb by Holly Kular 02-15-2024"
+    "Adapted from .m to .ipynb by Holly Kular\\\n",
+    "date: 02-15-2024"
    ]
   },
   {
@@ -19,13 +20,14 @@
    "id": "545dcfb8-08a2-4623-a2a3-d475655352e0",
    "metadata": {},
    "source": [
-    "% INPUT\n",
-    "%   task: task name ('instr', 'xor', etc...)\n",
-    "%   task_info: struct containing task information (stim onset time, \n",
-    "%   stim duration, delay duration, etc...)\n",
-    "% OUTPUT\n",
-    "%   u: input matrix\n",
-    "%   lab: struct containing trial info (instruction timing/amp and stim info)"
+    "INPUT\n",
+    " - task: task name ('instr', 'xor', etc...)\n",
+    " - task_info: struct containing task information (stim onset time, \n",
+    " - stim duration, delay duration, etc...)\\\n",
+    " \n",
+    "OUTPUT\n",
+    " - u: input matrix for fnc_eval_model.ipynb\n",
+    " - lab: struct containing trial info (instruction timing/amp and stim info)"
    ]
   },
   {
