--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -5,13 +5,13 @@
    "id": "b0198b70-3707-449e-bdf6-ecfdc7d3d71b",
    "metadata": {},
    "source": [
-    "% Name: Robert Kim\n",
-    "% Date: 06-09-2023\n",
-    "% Email: rkim@salk.edu\n",
-    "% generate_trials.m\n",
-    "% Description: Script to generate trials\n",
+    "Name: Robert Kim\\\n",
+    "Date: 06-09-2023\\\n",
+    "Email: rkim@salk.edu\\\n",
+    "generate_trials.m\\\n",
+    "Description: Script to generate trials\\\n",
     "\n",
-    "coverted from .m to .pynb by Holly Kular\n",
+    "coverted from .m to .pynb by Holly Kular\\\n",
     "date: 02-15-2024"
    ]
   },
