--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8cb3d0a8-3df1-4528-97d5-1f58aa828384",
    "metadata": {
     "tags": []
@@ -28,12 +28,13 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.io import loadmat\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "db89de4a-c316-4a51-92aa-b38035d8c07c",
    "metadata": {
     "tags": []
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7976c144-c21b-46ed-a802-0f5f756f2c36",
    "metadata": {
     "tags": []
@@ -58,13 +59,13 @@
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
     "afc = '2' # number of alternatives\n",
-    "coh = 'hi' # coherence\n",
+    "coh = 'lo' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f1d1c2ef-004a-4c2c-8a0b-5fb51956d998",
    "metadata": {
     "tags": []
@@ -72,7 +73,10 @@
    "outputs": [],
    "source": [
     "# Data Directory\n",
-    "data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "if sys.platform.startswith('linux'):\n",
+    "    data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "else:\n",
+    "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
     "\n",
     "# Get all the trained models (should be 40 .mat files)\n",
     "mat_files = [f for f in os.listdir(data_dir) if f.endswith('.mat')]\n",
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e806835c-613d-44aa-9f41-ac8d9b1d35ae",
    "metadata": {
     "tags": []
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "21389ae2-6159-4f55-bbc8-a25136a6beb1",
    "metadata": {
     "tags": []
@@ -152,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0ec6874e-4b69-4fb5-9fa8-f6dc484cacb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save trial data to load into other notebooks\n",
     "today = datetime.now().strftime(\"%y%m%d\")\n",
-    "full_file = os.path.join(data_dir, f\"/Trials_{today}.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"Trials_{today}.npz\")\n",
     "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs)"
    ]
   },
