--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8cb3d0a8-3df1-4528-97d5-1f58aa828384",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "db89de4a-c316-4a51-92aa-b38035d8c07c",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "7976c144-c21b-46ed-a802-0f5f756f2c36",
    "metadata": {
     "tags": []
@@ -58,14 +58,14 @@
     "# MODIFY HERE\n",
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '6' # number of alternatives\n",
-    "coh = 'lo' # coherence\n",
+    "afc = '2' # number of alternatives\n",
+    "coh = 'hi' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "id": "f1d1c2ef-004a-4c2c-8a0b-5fb51956d998",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "id": "e806835c-613d-44aa-9f41-ac8d9b1d35ae",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
    "source": [
     "# **Testing task condition \n",
     "task_info = {}\n",
-    "task_info['trials'] = 100\n",
+    "task_info['trials'] = 200\n",
     "task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
     "task_info['stim_on'] = 80\n",
     "task_info['stim_dur'] = 50\n",
@@ -110,13 +110,13 @@
     "# NOTE: adjust pred and primary_prob to change the testing environement\n",
     "# Ex. Evenly distributed 6-AFC => task_info.primary_prob = 1/6;\n",
     "# Ex. pred=5 and primary_prob = 0.7 => stim \"5\" will be predominant (70% of the time)\n",
-    "task_info['pred'] = 1 # predominant stimulus is \"1\"\n",
+    "task_info['pred'] = 0 # predominant stimulus is \"1\"\n",
     "task_info['primary_prob'] = 0.70; # 70-30 split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "id": "21389ae2-6159-4f55-bbc8-a25136a6beb1",
    "metadata": {
     "tags": []
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "id": "0ec6874e-4b69-4fb5-9fa8-f6dc484cacb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save trial data to load into other notebooks\n",
     "today = datetime.now().strftime(\"%y%m%d\")\n",
-    "full_file = os.path.join(data_dir, f\"Trials_{today}.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"Trials_0expected.npz\")\n",
     "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs)"
    ]
   },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "7c0e4e67-43df-4b51-9e7f-96cc25c47d04",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'x1_0', 'r1_0', 'w1_0', 'x2_0', 'r2_0', 'w2_0', 'x3_0', 'r3_0', 'w3_0', 'w21_0', 'w32_0', 'taus_gaus1_0', 'taus_gaus2_0', 'taus_gaus3_0', 'w_in0', 'u', 'o', 'w1', 'w2', 'w3', 'w21', 'w32', 'x1', 'x2', 'x3', 'target', 'w_out', 'r1', 'm1', 'r2', 'm2', 'r3', 'm3', 'w21_m', 'w32_m', 'som_m', 'N1', 'N2', 'N3', 'exc1', 'inh1', 'exc2', 'inh2', 'exc3', 'inh3', 'w_in', 'b_out', 'som_N', 'losses', 'taus', 'eval_perf_mean', 'eval_loss_mean', 'eval_os', 'eval_labels', 'taus_gaus1', 'taus_gaus2', 'taus_gaus3', 'tr', 'activation'])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,6 +406,33 @@
     "# Look at what is inside the data file\n",
     "data = loadmat(model_path)\n",
     "data.keys() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4edb52b9-1118-47db-8aee-8c24dfd1fb8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 4., 3., 1., 2., 1., 1., 1., 4., 1., 1., 6., 4., 1.,\n",
+       "        1., 1., 1., 5., 1., 1., 1., 1., 1., 1., 1., 4., 1., 1., 6., 1.,\n",
+       "        2., 3., 1., 3., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1., 1., 1.,\n",
+       "        1., 3., 5., 1., 5., 1., 1., 1., 6., 1., 1., 1., 1., 1., 1., 4.,\n",
+       "        3., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 6., 1., 3., 4., 1., 1.,\n",
+       "        1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['eval_labels']"
    ]
   },
   {
