--- a/reprobrnn/probRNN_decode_fr.ipynb
+++ b/reprobrnn/probRNN_decode_fr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "97cf4036",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "aa241de5",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
     "t_win = [ 200,-1 ]\n",
     "\n",
     "# number of cv folds\n",
-    "n_cvs = 3 # performance goes up with fewer cvs? changed from 5 to 3\n",
+    "n_cvs = 5 # performance goes up with fewer cvs? looked at 3\n",
     "\n",
     "# store the accuracy\n",
     "acc = np.full( ( n_cvs ), np.nan )\n",
