--- a/decode_L1_excvsinh.ipynb
+++ b/decode_L1_excvsinh.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 273,
    "id": "000af540-4a71-4886-8250-9bdfbdfa74f0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 274,
    "id": "0210ed5e-58cc-4e61-a61a-8ae298c19094",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 285,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
     "# MODIFY HERE\n",
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '2' # number of alternatives\n",
+    "afc = '6' # number of alternatives\n",
     "coh = 'hi' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 286,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 287,
    "id": "15cbee79-c20b-42c8-bce0-55251828c482",
    "metadata": {},
    "outputs": [],
@@ -167,12 +167,12 @@
     "exc = model['exc1'].squeeze()\n",
     "data_d = data['fr1'][:,:,exc==1]\n",
     "labs = data['labs'].squeeze()\n",
-    "#labs = np.where(labs == 0, 0, 1)"
+    "labs = np.where(labs == 0, 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 288,
    "id": "3a855d1f-2c58-4e06-9cf8-798f988722ac",
    "metadata": {},
    "outputs": [
@@ -180,11 +180,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=0.5736152510448681, class_weight='balanced', kernel='linear')\n",
-      "CV: 1, SVC(C=0.007880462815669913, class_weight='balanced', kernel='linear')\n",
-      "CV: 2, SVC(C=0.9236708571873865, class_weight='balanced', kernel='linear')\n",
-      "CV: 3, SVC(C=0.0018873918221350976, class_weight='balanced', kernel='linear')\n",
-      "CV: 4, SVC(C=0.9236708571873865, class_weight='balanced', kernel='linear')\n",
+      "CV: 0, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 2, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=0.01268961003167922, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=0.01268961003167922, class_weight='balanced', kernel='linear')\n",
       "0.96\n"
      ]
     }
@@ -233,12 +233,12 @@
    "id": "0f4ebb63-422f-4e14-982c-88b33ee04331",
    "metadata": {},
    "source": [
-    "### Decode unexpected stim input"
+    "### Decode inhibitory units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 289,
    "id": "2ff4204d-5967-4836-b692-02b3affce268",
    "metadata": {},
    "outputs": [],
@@ -269,14 +269,14 @@
     "# get the data from layer 1 decode stim\n",
     "# this is a [trial x time step x unit] matrix\n",
     "inh = model['inh1'].squeeze()\n",
-    "data_d = data_unexpected['fr1'][:,:,inh==1]\n",
-    "labs = data_unexpected['labs'].squeeze()\n",
-    "labs = np.where(labs == 0, 0, 1)"
+    "data_d = data['fr1'][:,:,inh==1]\n",
+    "labs = data['labs'].squeeze()\n",
+    "#labs = np.where(labs == 0, 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 290,
    "id": "d307e7a9-d31e-411e-a1e9-45febcac7297",
    "metadata": {},
    "outputs": [
@@ -284,9 +284,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
       "  warnings.warn((\"The least populated class in y has only %d\"\n",
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
       "  warnings.warn((\"The least populated class in y has only %d\"\n"
      ]
     },
@@ -294,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=6.723357536499335e-05, class_weight='balanced', kernel='linear')\n",
-      "CV: 1, SVC(C=6.723357536499335e-05, class_weight='balanced', kernel='linear')\n"
+      "CV: 0, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n"
      ]
     },
     {
@@ -312,17 +312,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 2, SVC(C=6.723357536499335e-05, class_weight='balanced', kernel='linear')\n",
-      "CV: 3, SVC(C=6.723357536499335e-05, class_weight='balanced', kernel='linear')\n",
-      "CV: 4, SVC(C=0.03290344562312668, class_weight='balanced', kernel='linear')\n",
-      "0.9199999999999999\n"
+      "CV: 2, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=2.395026619987486, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=2.395026619987486, class_weight='balanced', kernel='linear')\n",
+      "0.77\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
       "  warnings.warn((\"The least populated class in y has only %d\"\n"
      ]
     }
