--- a/decode_L1_expectedvsunexpected-Copy1.ipynb
+++ b/decode_L1_expectedvsunexpected-Copy1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "000af540-4a71-4886-8250-9bdfbdfa74f0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0210ed5e-58cc-4e61-a61a-8ae298c19094",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 5,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 7,
    "id": "15cbee79-c20b-42c8-bce0-55251828c482",
    "metadata": {},
    "outputs": [],
@@ -141,89 +141,25 @@
     "# this is a [trial x time step x unit] matrix\n",
     "data_d = data_expected['fr1']\n",
     "labs = data_expected['labs'].squeeze()\n",
-    "#labs = np.where(labs == 0, 0, 1)"
+    "labs = np.where(labs == 0, 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "id": "3a855d1f-2c58-4e06-9cf8-798f988722ac",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=0.00045203536563602405, class_weight='balanced', kernel='linear')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CV: 1, SVC(C=0.00017433288221999874, class_weight='balanced', kernel='linear')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CV: 2, SVC(C=0.00010826367338740541, class_weight='balanced', kernel='linear')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CV: 3, SVC(C=0.00010826367338740541, class_weight='balanced', kernel='linear')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CV: 4, SVC(C=6.723357536499335e-05, class_weight='balanced', kernel='linear')\n",
-      "0.6900000000000001\n"
+      "CV: 0, SVC(C=6.2101694189156165, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 2, SVC(C=1.610262027560939e-05, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=4.1753189365604006e-05, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=10.0, class_weight='balanced', kernel='linear')\n",
+      "0.7399999999999999\n"
      ]
     }
    ],
@@ -276,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "id": "2ff4204d-5967-4836-b692-02b3affce268",
    "metadata": {},
    "outputs": [],
@@ -313,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 11,
    "id": "d307e7a9-d31e-411e-a1e9-45febcac7297",
    "metadata": {},
    "outputs": [
