--- a/decode_L1_excvsinh.ipynb
+++ b/decode_L1_excvsinh.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 316,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,13 @@
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
     "afc = '6' # number of alternatives\n",
-    "coh = 'hi' # coherence\n",
+    "coh = 'lo' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 317,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "# Choose one model as an example\n",
     "model_path = os.path.join(data_dir, mat_files[1])\n",
     "# Load data\n",
-    "data = np.load(f\"{data_dir}/Trials_0expected.npz\")\n",
+    "data = np.load(f\"{data_dir}/Trials200_0expected.npz\")\n",
     "model = loadmat(model_path)"
    ]
   },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 322,
    "id": "15cbee79-c20b-42c8-bce0-55251828c482",
    "metadata": {},
    "outputs": [],
@@ -167,12 +167,12 @@
     "exc = model['exc1'].squeeze()\n",
     "data_d = data['fr1'][:,:,exc==1]\n",
     "labs = data['labs'].squeeze()\n",
-    "labs = np.where(labs == 0, 0, 1)"
+    "#labs = np.where(labs == 0, 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 323,
    "id": "3a855d1f-2c58-4e06-9cf8-798f988722ac",
    "metadata": {},
    "outputs": [
@@ -180,12 +180,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 0, SVC(C=2.592943797404667e-05, class_weight='balanced', kernel='linear')\n",
       "CV: 1, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
       "CV: 2, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
-      "CV: 3, SVC(C=0.01268961003167922, class_weight='balanced', kernel='linear')\n",
-      "CV: 4, SVC(C=0.01268961003167922, class_weight='balanced', kernel='linear')\n",
-      "0.96\n"
+      "CV: 3, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=0.004893900918477494, class_weight='balanced', kernel='linear')\n",
+      "0.32\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 324,
    "id": "2ff4204d-5967-4836-b692-02b3affce268",
    "metadata": {},
    "outputs": [],
@@ -276,54 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 325,
    "id": "d307e7a9-d31e-411e-a1e9-45febcac7297",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n",
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
-      "CV: 1, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n",
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CV: 2, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
-      "CV: 3, SVC(C=2.395026619987486, class_weight='balanced', kernel='linear')\n",
-      "CV: 4, SVC(C=2.395026619987486, class_weight='balanced', kernel='linear')\n",
-      "0.77\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
+      "CV: 0, SVC(C=2.592943797404667e-05, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 2, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=0.020433597178569417, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=0.004893900918477494, class_weight='balanced', kernel='linear')\n",
+      "0.355\n"
      ]
     }
    ],
