--- a/decode_L1_stimvschoice-Copy1.ipynb
+++ b/decode_L1_stimvschoice-Copy1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 115,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 116,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "\n",
     "# Load data\n",
     "#data = np.load(f\"{data_dir}/Trials.npz\")\n",
-    "data = np.load(f\"{data_dir}/Trials_0expected.npz\")"
+    "data = np.load(f\"{data_dir}/Trials200_0expected.npz\")"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "a8789816-115f-461e-a6df-f00cbdc9049d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 117,
    "id": "865d2939-19b4-4447-8931-404ecf2d8ab9",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 118,
    "id": "4c7e15f8-27fe-4ba1-b37f-db09e59d687a",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 119,
    "id": "c1ba66ff-804b-4f94-9c55-df3fc4981464",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal threshold: 0.30000000000000004, Best Accuracy: 0.7699999999999999\n"
+      "Optimal threshold: 0.8000000000000002, Best Accuracy: 0.825\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 122,
    "id": "87962003-7368-4e72-ad63-aa3e3972675a",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 123,
    "id": "5d5557f4-a8cf-42dd-a5cf-0f0d164a869d",
    "metadata": {},
    "outputs": [
@@ -298,12 +298,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV: 0, SVC(C=6.2101694189156165, class_weight='balanced', kernel='linear')\n",
-      "CV: 1, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
-      "CV: 2, SVC(C=1.610262027560939e-05, class_weight='balanced', kernel='linear')\n",
-      "CV: 3, SVC(C=4.1753189365604006e-05, class_weight='balanced', kernel='linear')\n",
+      "CV: 0, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=6.2101694189156165, class_weight='balanced', kernel='linear')\n",
+      "CV: 2, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=6.2101694189156165, class_weight='balanced', kernel='linear')\n",
       "CV: 4, SVC(C=10.0, class_weight='balanced', kernel='linear')\n",
-      "0.7399999999999999\n"
+      "0.725\n"
      ]
     }
    ],
