--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "id": "7976c144-c21b-46ed-a802-0f5f756f2c36",
    "metadata": {
     "tags": []
@@ -58,14 +58,14 @@
     "# MODIFY HERE\n",
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '2' # number of alternatives\n",
-    "coh = 'hi' # coherence\n",
+    "afc = '6' # number of alternatives\n",
+    "coh = 'lo' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 115,
    "id": "f1d1c2ef-004a-4c2c-8a0b-5fb51956d998",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 116,
    "id": "e806835c-613d-44aa-9f41-ac8d9b1d35ae",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "id": "21389ae2-6159-4f55-bbc8-a25136a6beb1",
    "metadata": {
     "tags": []
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 119,
    "id": "0ec6874e-4b69-4fb5-9fa8-f6dc484cacb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save trial data to load into other notebooks\n",
     "today = datetime.now().strftime(\"%y%m%d\")\n",
-    "full_file = os.path.join(data_dir, f\"Trials_0expected.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"Trials200_0expected.npz\")\n",
     "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs)"
    ]
   },
