--- a/decode_L1_expectedvsunexpected-Copy1.ipynb
+++ b/decode_L1_expectedvsunexpected-Copy1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "f4fb9ed9-613e-4301-a9f0-2103900c9a37",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 71,
    "id": "7e2aa4ae-557e-4067-8a3d-63f01c1ca5e8",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 72,
    "id": "49f22c5b-4b85-473a-b857-574905326f99",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 73,
    "id": "0ac5ce22-d2a3-4afd-ba9f-1449ec954172",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal threshold: 0.6000000000000002, Best Accuracy: 0.86\n"
+      "Optimal threshold: 0.8000000000000002, Best Accuracy: 0.825\n"
      ]
     }
    ],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "id": "f67daf47-b4a7-47cf-b141-6bdd2ff5ecda",
    "metadata": {},
    "outputs": [],
@@ -534,31 +534,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 75,
    "id": "bc506f9f-7048-4a9d-a12b-0181de3073f3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.1, Accuracy: 0.79\n",
-      "Threshold: 0.15000000000000002, Accuracy: 0.75\n",
-      "Threshold: 0.20000000000000004, Accuracy: 0.8300000000000001\n",
-      "Threshold: 0.25000000000000006, Accuracy: 0.8299999999999998\n",
-      "Threshold: 0.30000000000000004, Accuracy: 0.85\n",
-      "Threshold: 0.3500000000000001, Accuracy: 0.85\n",
-      "Threshold: 0.40000000000000013, Accuracy: 0.7999999999999999\n",
-      "Threshold: 0.45000000000000007, Accuracy: 0.7999999999999999\n",
-      "Threshold: 0.5000000000000001, Accuracy: 0.55\n",
-      "Threshold: 0.5500000000000002, Accuracy: 0.55\n",
-      "Threshold: 0.6000000000000002, Accuracy: 0.7\n",
-      "Threshold: 0.6500000000000001, Accuracy: 0.7\n",
-      "Threshold: 0.7000000000000002, Accuracy: 0.7\n",
-      "Threshold: 0.7500000000000002, Accuracy: 0.65\n",
-      "Threshold: 0.8000000000000002, Accuracy: 0.65\n",
-      "Threshold: 0.8500000000000002, Accuracy: 0.63\n",
-      "Optimal threshold: 0.6000000000000002, Best Accuracy: 0.86\n"
+      "Optimal threshold: 0.8500000000000002, Best Accuracy: 0.9650000000000001\n"
      ]
     }
    ],
@@ -601,11 +593,19 @@
     "      best_thresh = thresh\n",
     "\n",
     "  # Progress report after each threshold iteration\n",
-    "  print(f'Threshold: {thresh}, Accuracy: {accuracy}')\n",
+    "  #print(f'Threshold: {thresh}, Accuracy: {accuracy}')\n",
     "\n",
     "# Print overall results\n",
     "print(f\"Optimal threshold: {best_thresh}, Best Accuracy: {best_accuracy}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43f4f7e2-bfe7-4486-8904-b5e0791f7d53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
