--- a/decode_L1_stimvschoice-Copy1.ipynb
+++ b/decode_L1_stimvschoice-Copy1.ipynb
@@ -184,6 +184,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "id": "001e5b71-bbd2-4109-9af5-be56285dcf1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hold_out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "id": "c1ba66ff-804b-4f94-9c55-df3fc4981464",
    "metadata": {},
