--- a/decode_L1_excvsinh.ipynb
+++ b/decode_L1_excvsinh.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 366,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
     "# MODIFY HERE\n",
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '6' # number of alternatives\n",
+    "afc = '2' # number of alternatives\n",
     "coh = 'lo' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 367,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -353,12 +353,12 @@
    "id": "19d9e220-375e-433d-bf79-41a08aa747d9",
    "metadata": {},
    "source": [
-    "### Decode expected stim choice"
+    "### Decode excitatory  stim choice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 368,
    "id": "f4fb9ed9-613e-4301-a9f0-2103900c9a37",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 369,
    "id": "7e2aa4ae-557e-4067-8a3d-63f01c1ca5e8",
    "metadata": {},
    "outputs": [],
@@ -412,13 +412,13 @@
     "\n",
     "# get the data from layer 1 decode choice\n",
     "# this is a [trial x time step x unit] matrix\n",
-    "data_d = data_expected['fr1']\n",
-    "labs = data_expected['outs'][:,-1]"
+    "data_d = data['fr1'][:,:,exc==1]\n",
+    "labs = data['outs'][:,-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 370,
    "id": "49f22c5b-4b85-473a-b857-574905326f99",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 371,
    "id": "0ac5ce22-d2a3-4afd-ba9f-1449ec954172",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal threshold: 0.6000000000000002, Best Accuracy: 0.86\n"
+      "Optimal threshold: 0.20000000000000004, Best Accuracy: 0.9949999999999999\n"
      ]
     }
    ],
@@ -504,12 +504,12 @@
    "id": "cdd8003b-96de-4bf3-b724-eb63269a9e12",
    "metadata": {},
    "source": [
-    "### Decode unexpected stim choice"
+    "### Decode inhibitory stim choice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 372,
    "id": "f67daf47-b4a7-47cf-b141-6bdd2ff5ecda",
    "metadata": {},
    "outputs": [],
@@ -539,8 +539,8 @@
     "\n",
     "# get the data from layer 1 decode choice\n",
     "# this is a [trial x time step x unit] matrix\n",
-    "data_d = data_unexpected['fr1']\n",
-    "labs = data_unexpected['outs'][:,-1]\n",
+    "data_d = data['fr1'][:,:,inh==1]\n",
+    "labs = data['outs'][:,-1]\n",
     "\n",
     "# Define threshold range (adjust as needed)\n",
     "thresholds = np.arange(0.1, 0.9, 0.05)\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 373,
    "id": "bc506f9f-7048-4a9d-a12b-0181de3073f3",
    "metadata": {},
    "outputs": [
@@ -569,23 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.1, Accuracy: 0.79\n",
-      "Threshold: 0.15000000000000002, Accuracy: 0.75\n",
-      "Threshold: 0.20000000000000004, Accuracy: 0.8300000000000001\n",
-      "Threshold: 0.25000000000000006, Accuracy: 0.8299999999999998\n",
-      "Threshold: 0.30000000000000004, Accuracy: 0.85\n",
-      "Threshold: 0.3500000000000001, Accuracy: 0.85\n",
-      "Threshold: 0.40000000000000013, Accuracy: 0.7999999999999999\n",
-      "Threshold: 0.45000000000000007, Accuracy: 0.7999999999999999\n",
-      "Threshold: 0.5000000000000001, Accuracy: 0.55\n",
-      "Threshold: 0.5500000000000002, Accuracy: 0.55\n",
-      "Threshold: 0.6000000000000002, Accuracy: 0.7\n",
-      "Threshold: 0.6500000000000001, Accuracy: 0.7\n",
-      "Threshold: 0.7000000000000002, Accuracy: 0.7\n",
-      "Threshold: 0.7500000000000002, Accuracy: 0.65\n",
-      "Threshold: 0.8000000000000002, Accuracy: 0.65\n",
-      "Threshold: 0.8500000000000002, Accuracy: 0.63\n",
-      "Optimal threshold: 0.6000000000000002, Best Accuracy: 0.86\n"
+      "Optimal threshold: 0.1, Best Accuracy: 0.99\n"
      ]
     }
    ],
@@ -628,11 +612,17 @@
     "      best_thresh = thresh\n",
     "\n",
     "  # Progress report after each threshold iteration\n",
-    "  print(f'Threshold: {thresh}, Accuracy: {accuracy}')\n",
+    "  #print(f'Threshold: {thresh}, Accuracy: {accuracy}')\n",
     "\n",
     "# Print overall results\n",
     "print(f\"Optimal threshold: {best_thresh}, Best Accuracy: {best_accuracy}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa0ee257-6e90-4ced-ab0d-e626e28d4af9",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
