over time instantiation

--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -164,7 +164,7 @@
     "# save trial data to load into other notebooks\n",
     "today = datetime.now().strftime(\"%y%m%d\")\n",
     "full_file = os.path.join(data_dir, f\"Trials200_0expected.npz\")\n",
-    "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs)"
+    "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs, task_info=task_info)"
    ]
   },
   {
