--- a/fnc_decode_L1.ipynb
+++ b/fnc_decode_L1.ipynb
@@ -8,50 +8,31 @@
     "Name: Holly Kular\\\n",
     "Date: 03-19-2024\\\n",
     "Email: hkular@ucsd.edu\\\n",
-    "decode_L1.m\\\n",
+    "fnc_decode_L1.py\\\n",
     "Description: Script for decoding analysis on layer 1 of probabilistic RNN"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "000af540-4a71-4886-8250-9bdfbdfa74f0",
+   "cell_type": "markdown",
+   "id": "f5442b04-07b5-4acc-afb4-8c9996aa971a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0210ed5e-58cc-4e61-a61a-8ae298c19094",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.svm import SVC  \n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import make_classification\n",
-    "from scipy.optimize import curve_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fcbd9150-472d-4a1d-8528-6f55e31fdb94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_progress(progress, total):\n",
-    "    bar_length = 20  # Adjust this for desired bar length\n",
-    "    filled_length = int(round(progress / total * bar_length))\n",
-    "    bar = '=' * filled_length + '-' * (bar_length - filled_length)\n",
-    "    print(f'Progress: [{bar}] {progress}/{total}', end='\\r')"
+    "INPUT\\\n",
+    "RNN_params (dict)\n",
+    "   - prob_split: what was the split of the dominant stim vs all (default '70_30')\n",
+    "   - afc: number of alternatives (2 or 6) (default 2)\n",
+    "   - coh: what was the coherence of RDK (default 'hi')\n",
+    "   - feedback: interlayer feedback (true or false) (default false)\n",
+    "   - thresh: the threshold to label RNN output (default [.3, .7])\n",
+    "\n",
+    "D_params (dict)\n",
+    "   - time_avg: whether we want decoding averaged over time or not (true or false) (default false)\n",
+    "   - t_win: what time window to average over if time_avg = true (default [200,-1])\n",
+    "   - n_cvs: cross validation folds (default 5)\n",
+    "   - num_cgs: penalties to eval (default 30)\n",
+    "   \n",
+    "plot: whether to save plots or not (true or false) (default false)\n",
+    "    "
    ]
   },
   {
@@ -61,32 +42,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODIFY HERE\n",
-    "# what conditions were the RNNs trained on?\n",
-    "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '2' # number of alternatives\n",
-    "coh = 'lo' # coherence\n",
-    "feedback = False # interlayer feedback (true or false)\n",
-    "thresh = [ 0.3,0.7 ] # threshold for whether stim 1 or other\n",
+    "def fnc_decode_L1(RNN_params, D_params, data, plot):\n",
     "\n",
-    "# decode opts\n",
-    "time_avg = False # do we want to look at average over time window?\n",
-    "if time_avg:\n",
-    "    t_win = [ 200,-1 ]\n",
-    "n_cvs = 5\n",
-    "# store the accuracy\n",
-    "acc = np.full( ( n_cvs ), np.nan )\n",
+    "    #set up defaults\n",
+    "    if RNN_params:\n",
+    "        prob_split = RNN_params['prb_split']\n",
+    "        afc = RNN_params['afc']\n",
+    "        coh = RNN_params['coh']\n",
+    "        feedback = RNN_params['feedback']\n",
+    "        thresh = RNN_params['thresh']\n",
+    "    else:\n",
+    "        prob_split = '70_30'\n",
+    "        afc = 2\n",
+    "        coh = 'hi'\n",
+    "        feedback = False\n",
+    "        thresh = [.3,.7]\n",
+    "        \n",
+    "    if D_params:\n",
+    "        time_avg = D_params['time_avg']\n",
+    "        t_win = D_params['t_win']\n",
+    "        n_cvs = D_params['n_cvs']\n",
+    "        num_cgs = D_params['num_cgs']\n",
+    "    else:\n",
+    "        time_avg = False\n",
+    "        t_win = [200,-1]\n",
+    "        n_cvs = 5\n",
+    "        num_cgs = 30\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # store the accuracy\n",
+    "    acc = np.full( ( n_cvs ), np.nan )\n",
     "\n",
-    "# penalties to eval\n",
-    "num_cgs = 30\n",
-    "Cs = np.logspace( -5,1,num_cgs )\n",
+    "    # penalties to eval\n",
+    "    Cs = np.logspace( -5,1, num_cgs )\n",
     "\n",
-    "# set up the grid\n",
-    "param_grid = { 'C': Cs, 'kernel': ['linear'] }\n",
+    "    # set up the grid\n",
+    "    param_grid = { 'C': Cs, 'kernel': ['linear'] }\n",
     "\n",
-    "# define object - use a SVC that balances class weights (because they are biased, e.g. 70/30)\n",
-    "# note that can also specify cv folds here, but I'm doing it by hand below in a loop\n",
-    "grid = GridSearchCV( SVC(class_weight = 'balanced'),param_grid,refit=True,verbose=0 )\n"
+    "    # define object - use a SVC that balances class weights (because they are biased, e.g. 70/30)\n",
+    "    # note that can also specify cv folds here, but I'm doing it by hand below in a loop\n",
+    "    grid = GridSearchCV( SVC(class_weight = 'balanced'),param_grid,refit=True,verbose=0 )\n"
    ]
   },
   {
